<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="titulo">Lista de Compras</string>
    <string name="primeiroBotao">Nova Lista</string>
    <string name="segundoBotao"> Listas Anteriores </string>
    <string name="terceiroBotao">Gestão de Dados</string>
    <string name="menu_carrinho">Carrinho</string>
    <string name="novoItem">Novo Item</string>
    <string name="designacao">Designação</string>
    <string name="quantidade">Quantidade</string>
    <string name="nomeItem">Nome do item</string>
    <string name="indiqueTitulo">Designação</string>
    <string name="indiqueQuantidade">Quantidade</string>
    <string name="marca">Marca</string>
    <string name="indiqueMarca">Marca</string>
    <string name="indiqueCategoria">Categoria</string>
    <string name="categoria">Categoria</string>
    <string name="foto">Foto</string>
    <string name="unidades">Unidades</string>
    <string name="unidade">Unidade</string>
    <string name="categorias">Categorias</string>
    <string name="dlgUniCatTitle">Nova %1$s</string>
    <string name="adicionar">Adicionar</string>
    <string name="notas">Notas</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ordenar">Ordenar</string>
    <string name="nomeInvalido">Nome inválido</string>
    <string name="quantidadeInvalida">Quantidade invalida</string>
    <string name="campoInvalido">Campo inválido</string>
    <string name="delete">Eliminar</string>
    <string name="editar">Editar</string>
</resources>
