<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffff"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:padding="16dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="#ffff00"
        android:textSize="26dp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <Button
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/primeiroBotao"
            android:padding="20dp"
            android:textSize="20sp"
            android:onClick="onNovaLista"/>
        <Button
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/segundoBotao"
            android:padding="20dp"
            android:textSize="20sp"
            android:onClick="onListasAnteriores"/>
        <Button
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terceiroBotao"
            android:padding="20dp"
            android:textSize="20sp"
            android:onClick="onGestaoDados"/>

    </LinearLayout>

</FrameLayout>