<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NovoItemActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etEditarDesignacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/indiqueTitulo"
                    android:maxLines="1"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etEditarMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/indiqueMarca"
                    android:maxLines="1"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp"
                    android:textSize="20sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivEditarImagem"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onDialogFoto"
                android:src="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">


            <EditText
                android:id="@+id/etEditarQuantidade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/indiqueQuantidade"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spnEditarUnidades"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/tvCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/categoria"
                android:textColor="#000000"
                android:textSize="26sp"></TextView>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spnEditarCategoria"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/tvNotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/notas"
                android:textColor="#000000"
                android:textSize="26sp"></TextView>

            <EditText
                android:id="@+id/etEditarNotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="5"
                android:paddingHorizontal="16dp"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnGravar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fbshape"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:text="@string/guardar"
        android:textColor="@android:color/white"
        android:layout_marginLeft="150dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fbshape"
        android:onClick="onCancelarNovoItem"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:text="@string/cancelar"
        android:textColor="@android:color/white"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

