<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    tools:context=".NovoItemActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etDesignacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    android:paddingHorizontal="16dp"
                    android:hint="@string/indiqueTitulo"
                    android:textSize="20sp"
                    android:maxLines="1"/>

                <EditText
                    android:id="@+id/etMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    android:paddingHorizontal="16dp"
                    android:hint="@string/indiqueMarca"
                    android:textSize="20sp"
                    android:maxLines="1"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/imagemItem"
                android:layout_weight="1"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_camera"
                android:onClick="onDialogFoto"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">


            <EditText
                android:id="@+id/etQuantidade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:hint="@string/indiqueQuantidade"
                android:textSize="20sp"
                android:layout_weight="1"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerUnidades"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:paddingRight="8dp"
                android:textSize="26sp"
                android:textColor="#000000">
            </TextView>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerCategoria"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notas"
                android:paddingRight="8dp"
                android:textSize="26sp"
                android:textColor="#000000"> </TextView>

            <EditText
                android:id="@+id/etNotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:textSize="20sp"
                android:layout_weight="1"
                android:maxLines="5" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

